--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <section id="quienes-somos">
     <h2>¿Quiénes somos?</h2>
-    <p>Moon Agencia de Modelos y Edecanes es una empresa joven y dinámica, comprometida con brindar servicios de excelencia en eventos de alto nivel. Fundada por Montserrat Hernández Betancourt y Diego Fernando Ugalde Franco, ambos ingenieros de profesión, buscamos proyectar elegancia, puntualidad y profesionalismo.</p>
+    <p>Moon Agencia de Modelos y Edecanes es una empresa joven y dinámica, comprometida con brindar servicios de excelencia en eventos de alto nivel. buscamos proyectar elegancia, puntualidad y profesionalismo.</p>
   </section>
 
   <section id="mision-vision">
@@ -85,9 +85,9 @@
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p><strong>Correo:</strong> contacto@moonmodelos.mx</p>
-    <p><strong>Teléfono:</strong> +52 55 1234 5678</p>
-    <p><strong>Instagram:</strong> @moon.agencia</p>
+    <p><strong>Correo:</strong> agenciamoon0118@gmail.com</p>
+    <p><strong>Teléfono:</strong> +52 5516111903</p>
+    <p><strong>Instagram:</strong> @agenciamoon0118</p>
   </section>
 
   <footer>
